# conway

./: .gitattributes  .gitignore  README.md  conway.cpp  conway.h  conway.ino  conway.yml  menu_utils.cpp  menu_utils.h
find-optimal/: .clang-format  .gitignore  CMakeLists.txt  Makefile  PERFORMANCE  README.md  airtable_client.h  cli.h  display_utils.h  evaluate-pattern.cu  explore-cachability.cpp  find-cuda-optimal.cpp  find-cuda-optimal.cu  find-optimal.cpp  frame_utils.h  gol.cpp  gol.cu  gol.h  gol_core.h  gol_cuda.cu  gol_cuda.h  mt.cpp  mt.h  run8gpu-perf.sh  run8gpu.sh  types.h  utils.cpp  utils.h
find-optimal/data/: README.md
find-optimal/docs/: ALGORITHM.md  ALGORITHM_FRAME_SEARCH.md  ALGORITHM_STRIP_SEARCH.md  BLOOM_FILTER.md  BUILD.md  PERFORMANCE.md
find-optimal/estimation-model/: Conway's GOL - Histogram of # Generations.csv  GOL_analysis.ipynb
find-optimal/include/: airtable_client.h  api_test_handlers.h  center4x4_utils.h  cli_parser.h  constants.h  cuda_utils.h  display_utils.h  frame_utils.h  gol.h  gol_core.h  gol_memory.h  gol_search.h  google_client.h  google_request_queue.h  logging.h  mt.h  platform_compat.h  queue_handlers.h  request_queue.h  search_memory.h  simulation_handlers.h  subgrid_cache.h  symmetry_utils.h  test_utils.h  types.h  utils.h
find-optimal/javascript/: README.md  progress-api.js  utils.js
find-optimal/progress-api/: README.md  service.js
find-optimal/src/: api_test_handlers.cpp  center4x4_utils.cpp  cli_parser.cpp  compare_hash_functions.cpp  explore-cachability.cpp  explore-reversibility.cpp  explore-subgrid.cpp  find-optimal.cpp  gol.cpp  gol_cuda.cu  gol_cuda_frames.cu  gol_cuda_shared.cu  gol_cuda_strips.cu  gol_cuda_subgrid.cu  gol_search.cpp  logging.cpp  queue_handlers.cpp  search_memory.cpp  simulation_handlers.cpp  subgrid_cache.cpp  subgrid_cache_cuda.cu  utils.cpp  validate_frame_search_completeness.cpp
find-optimal/tests/: test_display_utils.cpp  test_frame_utils.cpp  test_gol_core.cpp  test_search_completeness.cpp  test_search_space_reduction.cpp  test_strip_search.cpp  test_subgrid_cache.cpp  test_symmetry_utils.cpp
optimal-estimation-model/: Conway's GOL - Histogram of # Generations.csv  GOL_analysis.ipynb  README
patterns/: 185-gen.rle  186-gen.rle  188-gen.rle  193gen.rle  197-gen.rle  199-gen.rle  201-gen.rle  205b-gen.rle  205c-gen.rle  205gen.rle  206-gen.rle  207-gen.rle  209a-gen.rle  209b-gen.rle  212b-gen.rle  213-gen.rle  213-torus-33-gen.rle  213b-gen.rle  213c-gen.rle  217-gen-torus.rle  222-gen-torus.rle  223-gen-torus-a.rle  223-gen-torus-b.rle  223-gen-torus-c.rle
patterns/7x7coverable/: 204-gen-11584964701970156032.rle  204-gen-11996500945369626112.rle  204-gen-18424843485802845.rle  204-gen-18706318462513501.rle  204-gen-18768881803890362.rle  204-gen-19557057656480337.rle  204-gen-19804429821693634.rle  204-gen-23496710051881733.rle  204-gen-3408153002046550784.rle  204-gen-36783280313372346.rle  204-gen-388162926994412288.rle  204-gen-45843382663005834.rle  204-gen-4859948203631075840.rle  204-gen-5864380859036681472.rle  204-gen-9963913228555559424.rle  213-coverage-190-gen.rle
tools/: pattern-converter  rle-converter  stats
